# onyx

./: .gitignore  README.md  client.py  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: codeql.yml  django.yml  docs.yml  test.yml
accounts/: models.py  serializers.py  urls.py  views.py
data/: config.py  models.py  serializers.py  tests.py  urls.py  views.py
docs/: data_types.md  fields.md  permissions.md  running_tests.md  server_control.md
metadb/: README.md  asgi.py  choices.txt  groups.txt  gunicorn.conf.py  manage.py  restart-celery.sh  settings.py  urls.py
metadb/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
metadb/api/: serializers.py  tests.py  urls.py  utils.py  views.py
metadb/data/: apps.py  config.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
metadb/groups/: base.txt  mpx-admin.txt  mpx-pha.txt  mpx.txt
metadb/internal/: apps.py  middleware.py  models.py  serializers.py  views.py
metadb/metadb/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
metadb/utils/: action.py  choices.py  classes.py  contextmanagers.py  errors.py  exceptionhandler.py  fieldcontext.py  fields.py  fieldserializers.py  filters.py  forms.py  query.py  (+11 more)
metadbclient/: setup.py
onyx/: .env.example  README.md  gunicorn.conf.py  manage.py  onyx.gunicorn.py  restart-celery.sh
scripts/: setup-project.sh  setup.sh  start-server.sh  start.sh  stop-server.sh  stop.sh
utils/: fields.py  fieldserializers.py  functions.py  responses.py
(+189 files in other folders)
