[tool.poetry]
name = "onyx"
version = "0.7.1"
description = "API for pathogen metadata."
authors = ["Thomas Brier <t.brier@outlook.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-rest-knox = "^4.2.0"
django-filter = "^23.3"
django-simple-history = "^3.4.0"
django-query-tools = "^0.3.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
